# dynacase-admin-uis

./: Makefile.in  README.md  configure.in  fam2po.php  info.xml.in
dynacase-admin-access-ui/: ACCESS_en.po  ACCESS_fr.po  Makefile.in  info.xml  info.xml.in
dynacase-admin-access-ui/Actions/ACCESS/: access.js  admin_actions_list.php  appl_access.js  appl_access.php  download.php  edit.css  edit.js  edit.php  edit.xml  import_export.xml  modify.php  modify_object.php  upload.php  user_access.css  user_access.js  user_access.php  user_access.xml
dynacase-admin-access-ui/Apps/ACCESS/: ACCESS.app  ACCESS_en.po  ACCESS_init.php  ACCESS_init.php.in  Makefile  haccess.php
dynacase-admin-access-ui/Data/: Init.csv
dynacase-admin-access-ui/Programs/: enable_ACCESS.bash
dynacase-admin-appmng-ui/: APPMNG_en.po  APPMNG_fr.po  Makefile.in  info.xml  info.xml.in
dynacase-admin-appmng-ui/Actions/APPMNG/: action_edit.php  action_edit.xml  action_mod.php  actionlist.js  actionlist.php  actionlist.xml  admin_actions_list.php  app_delete.php  app_edit.php  app_edit.xml  app_mod.php  app_update.php  applist.js  applist.php  applist.xml  appmng.css  appmng.js  param_alist.php  param_alist.xml  param_culist.xml  param_delete.php  param_list.css  param_list.js  param_mod.php  param_mod.xml  param_ulist.css  param_ulist.php  param_ulist.xml
dynacase-admin-appmng-ui/Apps/APPMNG/: APPMNG.app  APPMNG_fr.po  APPMNG_init.php  APPMNG_init.php.in
dynacase-admin-appmng-ui/Data/: Init.csv
dynacase-admin-appmng-ui/Programs/: enable_APPMNG.bash
dynacase-admin-docadmin-ui/: DOCADMIN_en.po  DOCADMIN_fr.po  Makefile.in  info.xml  info.xml.in
dynacase-admin-docadmin-ui/Data/: Init.csv  Makefile  Update.csv
dynacase-admin-fusers-ui/: FUSERS_en.po  FUSERS_fr.po  Makefile.in  info.xml  info.xml.in
dynacase-admin-fusers-ui/Data/: Init.csv
dynacase-admin-fusers-ui/Programs/: enable_FUSERS.bash
(+40 files in other folders)
