#   Autoconf script
#
#
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.1 2010-01-13 10:47:16 eric Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./Makefile.in)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=dynacase-admin-uis
AC_SUBST(APPNAME)
APPNAME=DYNACASE_ADMIN_UIS
ac_default_prefix=/var/www/dynacase/


for apps in `find .  -name '*.app'  -print`; do
    app=`basename $apps | cut -f1 -d.`
#    echo $app
    versionName="VERSION_"${app}
    releaseName="RELEASE_"${app}
#    echo $versionName
   # AC_SUBST([${versionName}])
   # AC_SUBST($releaseName)
    lapp=`echo $app | tr [A-Z] [a-z]`
    vn=`cat dynacase-admin-$lapp-ui/VERSION`
    vr=`cat dynacase-admin-$lapp-ui/RELEASE`
    eval "VERSION_$app=$vn"; 
    eval "RELEASE_$app=$vr"; 
done
AC_SUBST(VERSION_ACCESS)
AC_SUBST(RELEASE_ACCESS)
AC_SUBST(VERSION_APPMNG)
AC_SUBST(RELEASE_APPMNG)
AC_SUBST(VERSION_FUSERS)
AC_SUBST(RELEASE_FUSERS)
AC_SUBST(VERSION_VAULT)
AC_SUBST(RELEASE_VAULT)
AC_SUBST(VERSION_DOCADMIN)
AC_SUBST(RELEASE_DOCADMIN)



AC_SUBST(PUBRULE)
PUBRULE=
AC_ARG_WITH(pubrule, [  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)
if test -z ${PUBRULE}; then
    PUBRULE=`pwd`
fi
if test -f $PUBRULE/PubRule; then
    AC_MSG_NOTICE([PubRule located at $PUBRULE])
else
    AC_MSG_ERROR([Could not find PubRule])
fi

for file in `find . \( -name '*.in' -a -not -name configure.in \) -print`; do
    AC_CONFIG_FILES(${file%.in})
done

AC_OUTPUT
